--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,197 @@
-.App {
+#onTop{
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  width:100%;
+  height:40px;
+  padding-left: 30px;
+  padding-right:30px;
+}
+.topLeft{
+  color:yellow;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.highBar{
+  color:yellow;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: large;
+  text-decoration-style: none;
+}
+.highBar2{
+  color:rgb(8, 8, 8);
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: large;
+}
+.part1{
+  display: flex;
+  justify-content: space-between;
+  align-items:baseline;
+  gap:10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+.part2{
+  display:flex;
+  justify-content: center;
+  margin-top: 2px;
+}
+.presentation{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  border-top-style:solid ;
+  border-top-color: yellowgreen;
+  padding-top: 10px;
+  margin-right: 10px;
+  margin-top:5px;
+}
+#title{
+  font-size: x-large;
+  color: grey;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+#text1{
+  font-size: x-small;
+  color:rgb(77, 75, 75);
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.text2{
+    font-size: x-small;
+    color:rgb(7, 7, 7);
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+}
+.text2:hover {
+  font-size: larger;
+  color:#791a1a
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#play{
+  display:flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: baseline;
 }
-
-.App-link {
-  color: #61dafb;
+.themain{
+  display:grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  padding-left:20px;
+  padding-top: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imag{
+  width:90%;
+  margin-left: 10px;
+}
+#addm:hover #child{
+  display:block; 
+}
+.child {
+  display:flex;
+  justify-content: center;
+  text-decoration: none;
+  list-style: none;
+  position:absolute;
+  background-color: #f9f9f9; ;
+  width: 50%;
+  margin-top: 30px;
+  box-shadow: 0px 8px 16px 0px
+  rgba(0,0,0,0.2);
+  padding:12px 16px;
+  z-index:1 ;
+}
+.child2{
+  display:none;
+}
+.presentation1{
+  margin-top: 60px;
+  display:grid;
+  grid-template-columns: 35% 65%;
+  padding-top: 10px;
+  padding-left:20px;
+  padding-right:20px;
+}
+.gg-play-button {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 22px;
+  height: 22px
+}
+.gg-play-button::before {
+  content: "";
+  display: block;
+  box-sizing: border-box;
+  position: absolute;
+  width: 0;
+  height: 10px;
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  border-left: 6px solid;
+  top: 6px;
+  left: 9px
+}
+.affiche{
+  height:300px;
+  width:80%;
+}
+.title{
+  display:flex;
+  flex-direction: column;
+  justify-content: baseline;
+}
+.gg-pentagon-up {
+  box-sizing: border-box;
+  position: relative;
+  display: block;
+  transform: scale(var(--ggs,1));
+  width: 10px;
+  height: 10px
+}
+.gg-pentagon-up:before {
+  width: 51%
+}
+.gg-pentagon-up:after,
+.gg-pentagon-up:before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  height: 100%
+}
+.gg-pentagon-up:before {
+  left: -2px;
+  border-top: 2px solid;
+  border-left: 2px solid;
+  border-bottom: 2px solid;
+  transform: skew(0deg,-30deg)
+}
+.gg-pentagon-up:after {
+  right: -2px;
+  width: 50%;
+  border-right: 2px solid;
+  border-bottom: 2px solid;
+  border-top: 2px solid;
+  transform: skew(0deg,30deg)
+}
+.act{
+  width:20%;
+}
+.screen{
+  margin-right:30px;
+}
+.screen2{
+  display:none;
+}
+.text3{
+  text-align: center;
+  margin-left:160px;
+  margin-right:160px;
+  margin-top: 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.ds{
+  display:grid;
+  grid-template-columns: 25% 75%;
 }
